'订单接口更新'

--- a/myserver/接口说明.md
+++ b/myserver/接口说明.md
@@ -124,3 +124,16 @@ http://localhost:8888
             http://localhost:8888/address/update
         <!-- 删除地址接口 -->
             http://localhost:8888/address/delete
+    <!-- 订单接口(6) -->
+        <!-- 创建订单接口 -->
+            http://localhost:8888/order/add
+        <!-- 订单支付接口 -->
+            http://localhost:8888/order/pay
+        <!-- 订单确认收货接口 -->
+            http://localhost:8888/order/receiving/goods
+        <!-- 查询订单接口 -->
+            http://localhost:8888/order/query
+        <!-- 订单修改接口 -->
+            http://localhost:8888/order/update
+        <!-- 取消订单接口 -->
+            http://localhost:8888/order/cancel
