'人气排行接口'

--- a/myserver/接口说明.md
+++ b/myserver/接口说明.md
@@ -7,7 +7,7 @@ http://localhost:8888
             http://localhost:8888/store/goods
         <!-- 查询商家 -->
             http://localhost:8888/query/store
-    <!-- 用户接口(9) -->
+    <!-- 用户接口(11) -->
         <!-- 查询个人信息接口--请求头 -->
             http://localhost:8888/query/user
         <!-- 查询个人信息接口--请求体 -->
@@ -26,6 +26,10 @@ http://localhost:8888
             http://localhost:8888/auto/login
         <!-- 用户上传头像接口 -->
             http://localhost:8888/user/head
+        <!-- 查询用户名是否存在 -->
+            http://localhost:8888/query/username
+        <!-- 修改用户信息 -->
+            http://localhost:8888/user/update
     <!-- 通用接口(4) -->
         <!-- 获取协议接口 -->
             http://localhost:8888/suggest/info
@@ -137,3 +141,5 @@ http://localhost:8888
             http://localhost:8888/order/update
         <!-- 取消订单接口 -->
             http://localhost:8888/order/cancel
+    <!-- 人气排行接口(1) -->
+            http://localhost:8888/popular
